<resources>
    <string name="app_name">EPO update</string>

    <string name="manual_update">Update now!</string>
    <string name="ok">EPO updated</string>
    <string name="problem">EPO not updated</string>
    <string name="no_root">No root access!</string>
    <string name="last_update">Last update:\t\t</string>
    <string name="date_format">yyyy-MM-dd HH:mm:ss</string>
    <string name="weekly">Weekly</string>
    <string name="daily">Daily</string>
    <string name="monthly">Monthly</string>
    <string name="wifi_only">WiFi only</string>
    <string name="audoupdate_set">Automatic EPO update enabled</string>
    <string name="audoupdate_reset">Automatic EPO update disable</string>
    <string name="autoupdate">Autoupdate</string>
    <string name="or">--or--</string>
</resources>
