<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">




    <Switch
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/autoupdate"
        android:id="@+id/switch_auto" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:id="@+id/params_layout">



        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daily"
                android:id="@+id/daily"
                android:onClick="onSettingsChange"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weekly"
                android:id="@+id/weekly"
                android:onClick="onSettingsChange"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monthly"
                android:id="@+id/monthly"
                android:onClick="onSettingsChange"/>


        </RadioGroup>

        <CheckBox
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="WiFi only"
            android:id="@+id/wifi_only"
            android:onClick="onSettingsChange"/>
    </LinearLayout>



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manual_update"
        android:id="@+id/button"
        android:layout_gravity="bottom"
        android:onClick="onForceUpdate" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="bottom">

        <TextView android:text="@string/last_update" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/last_update" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="NA"
            android:id="@+id/last_update_date"
            android:layout_centerHorizontal="true" />



    </LinearLayout>


</LinearLayout>